# docs/swagger.json
@@ -150,6 +150,11 @@
         },
         "/api/books/fetch": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mencari buku di Google Books via ISBN dan menyimpannya ke database lokal",
                 "consumes": [
                     "application/json"
